--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "vscode-manager",
 	"displayName": "Custom Profiles for VSCode",
-	"publisher": "mrsauravsahu",
+	"publisher": "dungxtd",
 	"icon": "resources/icon.png",
 	"description": "Manage VSCode custom profiles with isolated settings and extensions",
 	"version": "2.3.4",
 	"repository": {
-		"url": "https://github.com/mrsauravsahu/vscode-manager",
+		"url": "https://github.com/dungxtd/vscode-manager",
 		"type": "git"
 	},
 	"engines": {
